# mvsclib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.mvs  PDPCLIB.txt  README.md  build.txt  build_mvs.sh  job_mvs_template.m4  job_template.m4
common/include/: liballoc.h  mvs.h  mvssupa.h  setjmp.h  stdio.h
common/src/: stdio.c  stdlib.c  string.c  time.c
docs/: mvsopts
fss/: alloc.h  excp.h  finddevt.h  fss.h  tso.h
inc/: float.h  stdio.h  stdlib.h
linux/asm/: stringa.asm
misc/: allmvs.bat  compall.cmd  compile.bat  compile.cmd  compile.mvs  compmsvcrt.bat  compp.bat  comppdptest.bat  compperf.cmd  dosstart.asm  dossupa.asm  makefile.bcc  makefile.bl3  makefile.dos  makefile.emx  makefile.ibm  makefile.min  makefile.p32  makefile.pde  makefile.pds  makefile.pdw  makefile.pwc  makefile.pwe  makefile.w32  makefile.wat  makefile.wcd  makefile.wl3  mytest.cmd  osstart.asm  pdossupc.c  pdp1.jcl  pdp2.jcl  pdp3.jcl  pdp4.jcl  pdp5.jcl  pdp6.jcl  pdpclib.bat  pdpclib.txt  pdpcms.bat  pdpcms.exec  (+20 more)
mvs/asm/: mvsstart.asm  mvssupa.asm
mvs/asm/fss/: svc.asm
mvs/include/ezasmi/: ezasmi.h
mvs/include/fss/: chainr.h  svc.h
mvs/src/ezasmi/: ezasmi.c
mvs/src/fss/: alloc.c  chainr.c  excp.c  finddevt.c  fss.c  svc.c  tso.c
src/: ctype.c  liballoc.c  linstart.c  math.c  setjmp.c  signal.c  start.c  stdio.c
sys/: socket.h  types.h
